@@ -48,6 +48,7 @@ NEWS
   * fix sending source of cgi script instead of 500 error if fork fails
   * fix min-procs handling in mod_scgi.c, just set to max-procs (patch from #623)
   * fix sending "408 - Timeout" instead of "410 - Gone" for timedout urls in mod_secdownload (#1440)
+  * workaround #1587: require userdir.path to be set to enable mod_userdir (empty string allowed)
 
 - 1.4.18 - 2007-09-09
 
